# tinyraycaster_in_plain_c

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  README_ru.md  common.h  defs.h  framebuffer.c  framebuffer.h  init.c  init.h  input.c  main.c  map.c  map.h  render.c  render.h  texture.c  texture.h  timer.h  utils.h
src/: common.h  defs.h  framebuffer.c  framebuffer.h  init.c  init.h  input.c  input.h  main.c  map.c  render.c  render.h  texture.c  texture.h  timer.c  utils.c
